# grpc-odd-number-checker

./: .gitignore  CMakeLists.txt  Readme.md  conanfile.txt  generate_proto
proto/: number_checker.proto  numberchecker.proto
src/: client.cpp  server.cpp
src/controllers/odd_number_checker_controller/: odd_number_checker.cpp  odd_number_checker.h
src/globals/server/: websocket_globals.cpp  websocket_globals.h
src/handlers/rapid_json/: rapid_json_handlers.cpp  rapid_json_handlers.h
src/utils/: grpc_server_utils.cpp  grpc_server_utils.h  websocket_server_utils.cpp  websocket_server_utils.h
